# proof-checker

./: .gitignore  Cargo.toml  Makefile  Performance.md  README.md  flake.nix  impreflex.pretty-claim  impreflex.pretty-proof  proof-language.md  test
generation/: Makefile  README.md  impreflex.ml-claim  impreflex.ml-proof  impreflex.pretty-proof  pyproject.toml  test.txt  test_claim2.txt  transfer-goal.ml-gamma  transfer-goal.ml-proof
generation/impreflex/: impreflex.ml-proof
generation/k-benchmarks/add-rewrite/: add-rewrite.k  input.add-rewrite
generation/k-benchmarks/arith/: add.arith  arith.k  well.arith
generation/k-benchmarks/assoc-function/: assoc-function.k  left.assoc-function  right.assoc-function
generation/k-benchmarks/builtin-functions/: abs.builtin-functions  builtin-functions.k  double.builtin-functions  head-bytes.builtin-functions  head-string.builtin-functions  ispos.builtin-functions
generation/k-benchmarks/builtin-int/: builtin-int.k  input.builtin-int
generation/k-benchmarks/builtin-io/: builtin-io.k  read.builtin-io
generation/k-benchmarks/builtin-json/: builtin-json.k  (+1 more)
generation/mm-benchmarks/: README.md  disjointness-alt-lemma.converted  disjointness-alt-lemma.mm  impreflex-compressed-goal.mm  impreflex.converted  impreflex.mm  svm5-goal.mm  transfer-batch-1k-goal.mm  transfer-goal-simple.mm  transfer-goal.mm  transfer-task-specific.mm  transfer.mm
generation/scripts/: gen-execution-proof-hints.sh  gen-transfer-batch-mm-proof.sh  pi2.sh
generation/transfer-compressed/: transfer-goal-simple-compressed.ml-proof
generation/transfer-task-specific/: transfer-task-specific.ml-proof
risc0/guest/: Cargo.toml
(+673 files in other folders)
