[package]
name = "guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "guest"
path = "src/main.rs"

[dependencies]
checker = { path = "../../checker" }
risc0-zkvm = { version = "0.16.1", default-features = false, features = [ "std" ] }

[workspace]
